# turing-calculator

./: LICENSE  LICENSE.txt  README.md  pyproject.toml  setup.py
emiliiak_calculator/: calculator.py
tests/: test_calculator.py
